--- a/index.html
+++ b/index.html
@@ -1569,15 +1569,17 @@ document.getElementById('themeToggle').addEventListener('change', function () {
         icon.textContent = 'light_mode'; // 🌞
     }
 });
+Khalid F, Now
 function switchLanguage(lang) {
     if (lang === 'en') {
-        location.reload();
+        window.location.href = 'https://qcanalayzer007.github.io/QC-ENG-/';
     } else if (lang === 'jp') {
-        window.location.href = 'https://qcanalayzer007.github.io/QC-JAPANESE-VER./';
+        window.location.href = 'https://qcanalayzer007.github.io/QC-JP/';
     } else if (lang === 'kr') {
         window.location.href = 'https://qcanalayzer007.github.io/QC-KOREAN-VER/';
     }
 }
+
 
     </script>
 </body>
