--- a/index.html
+++ b/index.html
@@ -1576,7 +1576,7 @@ function switchLanguage(lang) {
     } else if (lang === 'jp') {
         window.location.href = 'https://qcanalayzer007.github.io/QC-JP/';
     } else if (lang === 'kr') {
-        window.location.href = 'https://qcanalayzer007.github.io/QC-KOREAN-VER/';
+        window.location.href = 'https://qcanalayzer007.github.io/QC-KR/';
     }
 }
 
