--- a/index.html
+++ b/index.html
@@ -899,9 +899,28 @@
   "earnings are predictable",
   "your profit is certain",
   "definitely profitable",
-  "you will earn with no effort","guaranteed","daily profit","earn more","four hundred plus assets","Three hundred plus assets","four hundred plus assets",
+  "you will earn with no effort","guaranteed","daily profit","earn more","Affiliated","partnering","Infectious","Krishnamurti",
+"AI trading",
+"can make up to",
+"Infosys",
+"I can make around",
+"Ramon Ng",
+"Ramon Ang",
+"You will not lose your money",
+"financial adviser",
+"partnering",
+"senior expert",
+"Zero point",
+"Null-bit-ai2",
+"Guaranteed",
+"Profitable",
+"four hundred plus assets",
+"Three hundred plus assets",
+"in one day","Contraxct","Partnership","Dobai","feasible investment","automatically","can generate around","can still make up to","senior manager","Daily basis","Government",
+"automatically go in profit","each day you can make","return of minimum","really good return","daily basis profit","What is equity","you will get a return","can withdraw the profit",
+"will be making profit","can make at least","profit that you will be able to close","you'll be able to make","you'll be making around","daily profit","I can guarantee","can e take out your","we are going to talk over there","my voice clear",
 ];
-        
+     
         // Store uploaded files and their content
         const uploadedFiles = [];
         let currentFileIndex = 0;
