--- a/index.html
+++ b/index.html
@@ -1634,7 +1634,7 @@ themeToggle.addEventListener('change', function() {
 });
 function switchLanguage(lang) {
     if (lang === 'en') {
-        window.location.href = 'https://qcanalayzer007.github.io/QC-ENG-VER/';
+        window.location.href = 'https://qcanalayzer007.github.io/QC-ENG-/';
     } else if (lang === 'jp') {
         window.location.href = 'https://qcanalayzer007.github.io/QC-JP/';
     } else if (lang === 'kr') {
